syntax = "proto3";
option java_multiple_files = true;
package sep3datalayer.grpc.protobuf;
option csharp_namespace = "sep3client.booking";

message CreatingBooking{
  string username = 1;
  int32 totalPrice = 2;
}

message BookingGrpc{
  int32 id = 1;
  string username = 2;
  int32 totalPrice = 3;
}

message BookingList{
  repeated BookingGrpc bookings = 1;
}

service BookingService{
  rpc CreateBooking(CreatingBooking) returns (BookingGrpc);
}

